Fixed movie image alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ input[type=text]:focus {
     padding: 2.5em 0;
     text-align: left;
     display: flex;
+    align-items: center;
     border-bottom: 1px solid #333;
 }
 
